# ng-taxi

./: Procfile  app.json  pyproject.toml  website.txt
taxi/: asgi.py  middleware.py  routing.py  settings.py  urls.py
trips/: admin.py  consumers.py  models.py  serializers.py  urls.py  views.py
trips/migrations/: 0001_initial.py  0002_trip.py  0003_auto_20210714_1954.py
trips/tests/: test_http.py  test_websocket.py
