[tool.poetry]
name = "ng-taxi--server"
version = "0.1.0"
description = "Django Backend For ng-taxi"
authors = ["mandelak <kazi.keith@gmail.com>"]

[tool.poetry.dependencies]
python = "3.9.6"
Django = "^3.2.5"
djangorestframework = "^3.12.4"
djangorestframework-simplejwt = "^4.7.2"
channels = "^3.0.4"
channels-redis = "^3.3.0"
gunicorn = "^20.1.0"
uvicorn = "^0.14.0"
pytest-django = "^4.4.0"
psycopg2 = "^2.9.1"
psycopg2-binary = "^2.9.1"
django-heroku = "^0.3.1"
pytest = "^6.2.4"
pytest-asyncio = "^0.15.1"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.7"
ipython = "^7.25.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
